Style: fix link alignment with journal line (inline + baseline)

--- a/_sass/_publications.scss
+++ b/_sass/_publications.scss
@@ -203,9 +203,12 @@
         display: inline;
 
         a.btn {
+          display: inline;
+          vertical-align: baseline;
           font-family: "IBM Plex Sans", sans-serif;
           font-size: 0.65rem;
           font-weight: normal;
+          line-height: inherit;
           text-transform: none;
           color: var(--global-text-color);
           background-color: transparent;
